--- a/assets/sass/base/_variables.scss
+++ b/assets/sass/base/_variables.scss
@@ -2,25 +2,29 @@
 // ---------------------------------------
 
 // Breakpoint sizes in ems. Note: not relative to root font-size.
-$break-0: 0;                          // Mobile first yo
-$break-1: (640 / 16) * 1em;           // 640px   -  Small tablet up
-$break-2: (800 / 16) * 1em;           // 800px   -  Large tablet up
-$break-3: (1024 / 16) * 1em;          // 1024px  -  Desktop up
-$break-4: (1600 / 16) * 1em;          // 1600px  -  Large desktop up
+$breakpoints: (
+  break-0: 0,     // 0px       Mobile first
+  break-1: 640,   // 640px   ~ Small tablet up
+  break-2: 800,   // 800px   ~ Large tablet up
+  break-3: 1024,  // 1024px  ~ Desktop up
+  break-4: 1600   // 1600px  ~ Large desktop up
+);
 
 // Root font-sizes. Set to half desired line-height of body text.
-$rootsize-0: 12;                      // 24px line-height body text
-$rootsize-1: 14;                      // 28px line-height body text
-$rootsize-2: 15;                      // 30px line-height body text
-$rootsize-3: 17;                      // 34px line-height body text
-$rootsize-4: 18;                      // 36px line-height body text
+$rootsizes: (
+  rootsize-0: 12,   // 24px line-height body text
+  rootsize-1: 14,   // 28px line-height body text
+  rootsize-2: 15,   // 30px line-height body text
+  rootsize-3: 17,   // 34px line-height body text
+  rootsize-4: 18    // 36px line-height body text
+);
 
 // Control the line-length with max-width values for the container. Aim for 75–100 characters a line when possible, at smaller sizes type size is more important.
-$maxwidth-0: #{500 / $rootsize-0}rem; // 500px wide
-$maxwidth-1: #{550 / $rootsize-1}rem; // 550px wide
-$maxwidth-2: #{600 / $rootsize-2}rem; // 600px wide
-$maxwidth-3: #{680 / $rootsize-3}rem; // 650px wide
-$maxwidth-4: #{750 / $rootsize-4}rem; // 720px wide
+$maxwidth-0: #{500 / map-get($rootsizes, rootsize-0)}rem; // 500px wide
+$maxwidth-1: #{550 / map-get($rootsizes, rootsize-1)}rem; // 550px wide
+$maxwidth-2: #{600 / map-get($rootsizes, rootsize-2)}rem; // 600px wide
+$maxwidth-3: #{680 / map-get($rootsizes, rootsize-3)}rem; // 650px wide
+$maxwidth-4: #{750 / map-get($rootsizes, rootsize-4)}rem; // 720px wide
 
 // Add typefaces here.
 $serif: "edita", Georgia, Times, serif;
